--- a/sub/contactme.html
+++ b/sub/contactme.html
@@ -8,47 +8,209 @@
     <meta name="theme -color" content="blue">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
-        header{
-            position: relative;
-            height: 80px;
-            box-shadow: -2px 6px 45px -4px darkslateblue;
+        {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: 'Poppins', sans-serif;
         }
 
-        header>nav>ul{
+        body{
+            background-color: #3d4152;
+        }
+
+        .navigation{
+            position: fixed;
+            inset: 20px 0 20px 20px;
+            width: 75px;
+            background: white;
+            transition: 0.5s;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .navigation.open{
+            width: 250px;
+        }
+
+        .navigation .menuToggle{
             position: absolute;
-            right: 30px;
-            bottom: 10px;
-            font-size: 33px;
-            font-family: 'Lobster', cursive;
+            top: 0;
+            left: 0;
+            width: 100px;
+            height: 60px;
+            /*border-bottom: 1px solid rgba(0,0,0,0.5);*/
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 0 23px;
+        }
+
+        .navigation .menuToggle::before
+        {
+            content: '';
+            position: absolute;
+            width: 30px;
+            height: 2px;
+            background: #333;
+            transform: translateY(-8px);
+            transition: 0.5s;
+        }
+
+        .navigation.open .menuToggle::before{
+            transform: translateY(0px) rotate(45deg);
+        }
+
+        .navigation .menuToggle::after
+        {
+            content: '';
+            position: absolute;
+            width: 30px;
+            height: 2px;
+            background: #333;
+            transform: translateY(8px);
+            transition: 0.5s;
+            box-shadow: 0 -8px 0 #333;
+        }
+
+        .navigation.open .menuToggle::after{
+            transform: translateY(0px) rotate(-45deg);
+            box-shadow: 0 0 0 #333;
+        }
+
+        .navigation ul{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            width: 100%;
+        }
+
+        .navigation ul li{
             list-style: none;
+            position: relative;
+            width: 100%;
+            height: 60px;
+            padding: 0 10px;
+            transition: 0.5s;
+        }
+
+        .navigation ul li.active{
+            transform: translateX(30px);
+        }
+
+        .navigation.open ul li.active{
+            transform: translateX(10px);
+        }
+
+        .navigation ul li a{
+            position: relative;
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            text-align: center;
+            text-decoration: none;
+        }
+
+        .navigation ul li a .icon{
+            position: relative;
+            display: block;
+            min-width: 55px;
+            height: 55px;
+            line-height: 60px;
+            transition: 0.5s;
+            border-radius: 10px;
+            font-size: 1.75em;
+            color: #222;
+        }
+
+        .navigation ul li.active a .icon{
             color: white;
+            background: var(--clr);
         }
 
-        header>nav>ul {
+        .navigation ul li a .icon::before{
+            content: '';
             position: absolute;
-            right: 30px;
-            /*left: 78px;*/
-            bottom: 22px;
-            font-size: 32px;
-            margin: auto;
-            margin-left: -68px;
-            padding-left: 0;
-            width: max-content;
+            top: 10px;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: var(--clr);
+            filter: blur(8px);
+            opacity: 0;
+            transition: 0.5s;
+
         }
 
-        header>nav>ul>li{
-            padding: 0 10px 0 10px;
-            display: inline-block;
+        .navigation ul li.active a .icon::before{
+            opacity: 0.5;
         }
+
+        .navigation ul li a .text{
+            position: relative;
+            padding: 0 15px;
+            height: 60px;
+            display: flex;
+            align-items: center;
+            color: #333;
+            opacity: 0;
+            visibility: hidden;
+            transition: 0.5s;
+        }
+
+        .navigation.open ul li a .text{
+            opacity: 1;
+            visibility: visible;
+        }
+
+        .navigation ul li.active a .text{
+            color: var(--clr);
+        }
+
+        /*header{*/
+        /*    position: relative;*/
+        /*    height: 80px;*/
+        /*    box-shadow: -2px 6px 45px -4px darkslateblue;*/
+        /*}*/
+
+        /*header>nav>ul{*/
+        /*    position: absolute;*/
+        /*    right: 30px;*/
+        /*    bottom: 10px;*/
+        /*    font-size: 33px;*/
+        /*    font-family: 'Lobster', cursive;*/
+        /*    list-style: none;*/
+        /*    color: white;*/
+        /*}*/
+
+        /*header>nav>ul {*/
+        /*    position: absolute;*/
+        /*    right: 30px;*/
+        /*    !*left: 78px;*!*/
+        /*    bottom: 22px;*/
+        /*    font-size: 32px;*/
+        /*    margin: auto;*/
+        /*    margin-left: -68px;*/
+        /*    padding-left: 0;*/
+        /*    width: max-content;*/
+        /*}*/
+
+        /*header>nav>ul>li{*/
+        /*    padding: 0 10px 0 10px;*/
+        /*    display: inline-block;*/
+        /*}*/
 
         body{
             background-color: #1d1e57;
         }
 
-        h1{
+        h1 {
             color: #4e52e9;
             font-family: 'Lobster', cursive;
-            font-size: 50px;
+            font-size: 70px;
+            margin-left: 247px;
         }
 
 
@@ -62,7 +224,7 @@
             position: absolute;
             right: 0;
             top: 300px;
-            left: 800px;
+            left: 950px;
         }
 
         section>div>h1{
@@ -71,7 +233,7 @@
             position: absolute;
             top: 130px;
             right: 100px;
-            left: 800px;
+            left: 900px;
             margin: auto;
             margin-left: 30px;
         }
@@ -81,8 +243,9 @@
             color: white;
         }
 
-        ul>li{
+      main>section> div> ul>li{
             color: white;
+           margin-left: 100px;
         }
 
         h3{
@@ -91,6 +254,7 @@
             animation-delay: 0.1s;
             visibility: hidden;
             animation-fill-mode: forwards;
+            margin-left: 50px;
         }
 
         @keyframes zoomin {
@@ -107,7 +271,7 @@
         header>img{
             position: absolute;
             width: 600px;
-            margin-left: 250px;
+            margin-left: 350px;
             margin-top: 40px;
             animation: zoomin 1s linear 1;
             animation-delay: 0.1s;
@@ -198,38 +362,84 @@
     </style>
 </head>
 <body>
+<div class="navigation">
+    <div class="menuToggle"></div>
+    <ul>
+        <li class="list " style="--clr:#f44336;">
+            <a href="../home/index.html">
+                    <span class="icon">
+                        <ion-icon name="home-outline"></ion-icon>
+                    </span>
+                <span class="text">Home</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:orange">
+            <a href="aboutme.html">
+                    <span class="icon">
+                        <ion-icon name="person-outline"></ion-icon>
+                    </span>
+                <span class="text">About</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:purple;">
+            <a href="education.html">
+                    <span class="icon">
+                       <ion-icon name="book-outline"></ion-icon>
+                    </span>
+                <span class="text">Education</span>
+            </a>
+        <li class="list" style="--clr:green;">
+            <a href="skills.html">
+                    <span class="icon">
+                       <ion-icon name="desktop-outline"></ion-icon>
+                    </span>
+                <span class="text">Skills</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:blue">
+            <a href="projects.html">
+                    <span class="icon">
+                        <ion-icon name="newspaper-outline"></ion-icon>
+                    </span>
+                <span class="text">Projects</span>
+            </a>
+        </li>
+        <li class="list" style="--clr:pink">
+            <a href="assignmens.html">
+                    <span class="icon">
+                        <ion-icon name="document-outline"></ion-icon>
+                    </span>
+                <span class="text">Assignments</span>
+            </a>
+        </li>
+        <li class="list active" style="--clr: #800000">
+            <a href="contactme.html">
+                    <span class="icon">
+                        <ion-icon name="call-outline"></ion-icon>
+                    </span>
+                <span class="text">Contact</span>
+            </a>
+        </li>
+    </ul>
+</div>
 
 <header>
-    <nav>
-        <ul>
-
-            <li><a href="../home/index.html">Home</a></li>
-            <li><a href="aboutme.html">About</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="assignmens.html">Projects</a></li>
-            <li><a href="projects.html">Assignments</a></li>
-            <li><a href="contactme.html">Contact</a></li>
-        </ul>
-    </nav>
-
-
-
-
     <h1>Contact Me</h1>
+
     <img src="../assests/images/cll.png" alt="" width="50" >
 </header>
 
 <main>
     <section>
       <h1>Let's Talk</h1>
-
+        <div>
        <ul>
            <li> <img src="../assests/images/female-student.png" alt="" width="50" ><h3>Chamodi Sandunika Samrasinghe</h3></li><br>
            <li><img src="../assests/images/location.png" alt="" width="50" ><h3>Galle, Sri Lanka.</h3></li><br><br>
            <li> <img src="../assests/images/gmail.png" alt="" width="40" align="center">  <a href="mailto:chamodisandunika98@gmail.com">Click to Send Us a mail</a></li><br><br><br>
            <li> <img src="../assests/images/whatsapp.png" alt="" width="40" align="center">  <a href="tel:+94705135322">Call Us</a></li>
        </ul>
+        </div>
     </section>
 
     <section>
@@ -260,7 +470,27 @@
 <footer>
     <address></address>
 </footer>
+
+
+<script>
+    const menuToggle = document.querySelector('.menuToggle');
+    const navigation = document.querySelector('.navigation');
+    menuToggle.onclick = function () {
+        navigation.classList.toggle('open')
+    }
+
+    const list = document.querySelectorAll('.list');
+    function activeLink(){
+        list.forEach((item) =>
+            item.classList.remove('active'));
+        this.classList.add('active');
+    }
+
+    list.forEach((item) =>
+        item.addEventListener('click',activeLink))
+</script>
+
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
-
-
 </html>
